--- a/exercicios/DetectorDeIdade/estilo.css
+++ b/exercicios/DetectorDeIdade/estilo.css
@@ -19,6 +19,12 @@ section{
     box-shadow:3px 3px 10px rgba(0, 0, 0, 0.404);
 }
 
+div#img{
+    border-radius: 25%;
+    width: 250px;
+    height: 250px;
+}
+
 footer{
     color: white;
     text-align: center;
