--- a/exercicios/Contador/minhaVersão/estilo.css
+++ b/exercicios/Contador/minhaVersão/estilo.css
@@ -7,15 +7,14 @@ body{
 
 h1{
     text-align: center;
+    color:white
 }
 
 section{
-    position: absolute;
-    left: 25%;
-    top: 25%;
-    width: 50%;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.705);
-    height: 250px;
+    margin: auto;
+    width: 500px;
+    padding: 20px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.705);
     background-color: white;
     border-radius: 10px;
 }
@@ -37,8 +36,7 @@ input[type=button]{
 }
 
 footer {
-    position: absolute;
-    top: 75%;
-    left: 42%;
+    text-align: center;
    font-size: 1.2em;
+   color: white;
 }
