--- a/CFBcursos/aula44 a 47/estilo.css
+++ b/CFBcursos/aula44 a 47/estilo.css
@@ -31,6 +31,7 @@ button{
     margin: 5px 0px;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
 }
 
 .selecionado{
@@ -60,6 +61,7 @@ button{
     margin: 5px;
     height: 500px;
     width: 300px;
+    overflow-y: auto;
 }
 
 .btn_lixeira{
@@ -85,4 +87,8 @@ button{
 #caixaNovoCurso{
     margin: 10px;
     padding: 5px;
+}
+
+#btnAdicionarNovoCursoAntes{
+    margin: 10px 0px ;
 }
