--- a/CFBcursos/aula64 e 65-versãoprofessor/estilo.css
+++ b/CFBcursos/aula64 e 65-versãoprofessor/estilo.css
@@ -46,3 +46,11 @@
     border-radius: 5px;
 
 }
+
+.botaolixo{
+    background-color: #BBB;
+    width: 90%;
+    display: flex;
+    align-items: flex-start;
+}
+
