--- a/CFBcursos/aula80-minhaversão/estilo.css
+++ b/CFBcursos/aula80-minhaversão/estilo.css
@@ -27,6 +27,10 @@ main{
     box-shadow: 1px 2px 5px black;
     width: 350px;
 }
+.tocou{
+    background-color: #800 !important;
+    border-color: #f00 !important;
+}  
 
 p{
     font-size: 1.1em;
@@ -76,3 +80,4 @@ button{
     margin: 0px 9px;
     cursor: pointer;
 }
+
