--- a/CFBcursos/aula97-98/estilo.css
+++ b/CFBcursos/aula97-98/estilo.css
@@ -62,3 +62,12 @@ button{
     border-radius: 5px;
     margin: 5px;
 }
+
+.lixeira{
+    background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuV018kPn33pLTXQT9N-OTlLL3S-bdkfuYD6ckYi2J6g&s') center center no-repeat scroll ;
+    background-size: cover;
+
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
