--- a/CFBcursos/aula136-139/estilo.css
+++ b/CFBcursos/aula136-139/estilo.css
@@ -6,7 +6,7 @@
     margin: 0px;
     box-sizing: border-box;
 }
-#btn_mostrarcxmsg{
+.btn_mostrarcxmsg{
     padding: 10px 40px;
     cursor: pointer;
     border-radius: 5px;
