--- a/CFBcursos/aula142-152/estilo.css
+++ b/CFBcursos/aula142-152/estilo.css
@@ -4,7 +4,7 @@
     border: none;
     box-sizing: border-box;
 }
-.fundologin{
+/* .fundologin{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,23 +14,29 @@
     top: 0px;
     left: 0px;
     background-color: rgba(0,0,0,0.75);
+    box-sizing: border-box;
 
 }
 
 .baselogin{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     width: 50%;
+    box-sizing: border-box;
+
 }
 
 .elementoslogin{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     width: 50%;
     background-color: #eee;
+    padding:10px;
+    border-radius: 10px 0px 0px 10px;
+    box-sizing: border-box;
 }
 
 .logologin{
@@ -39,15 +45,54 @@
     align-items: center;
     width: 50%;
     background-color: #bbb;
-
+    padding:10px;
+    border-radius: 0px 10px 10px 0px;
+    box-sizing: border-box;
 }
 
 .logologin img{
-    width: 90%;
+    width: 90%;  
+}
+
+.campologin{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+.botoeslogin{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.botoeslogin button{
+    cursor: pointer;
+    background-color: #048;
+    color: #fff;
+    border-radius: 5px;
+    padding: 10px 35px;
+    box-sizing: border-box;
     
 }
-/* formatação tela login */
 
+.campologin label{
+    font-size: 1.1em;
+
+}
+
+.campologin input{
+    font-size: 1.1em;
+    padding: 5px;
+    background-color: #fff;
+    border-radius: 5px;
+} */
+/* formatação tela login */
 
 
 /* *************************** */
