--- a/CFBcursos/DataGridView-Projeto/estilo.css
+++ b/CFBcursos/DataGridView-Projeto/estilo.css
@@ -11,7 +11,7 @@
     
 }
 
-thead {
+thead tr {
    background-color: #138;  
    color: #fff;
    
@@ -25,9 +25,18 @@ th{
 td{
     padding: 5px;
 }
-tbody{
-      
+
+tbody tr:nth-child(odd){
+    background-color: #aaa;
 }
+tbody tr:nth-child(even){
+    background-color: #ddd;
+}
+
+tbody tr:hover{
+    background-color: #088 !important;
+    cursor: pointer;}
+    
 
 .c1{
     width: 100px;
@@ -43,4 +52,8 @@ tbody{
 }
 .c5{
     width: 100px;
+}
+
+.dgv{
+    margin: 7px;
 }
